# jaxinterp2d

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
src/jaxinterp2d/: __init__.py
test/: test_basic.py
