[metadata]
# replace with your username:
name = jaxinterp2d
version = 0.0.1
author = Adam Coogan
author_email = dr.adam.coogan@gmail.com
description = Bilinear interpolation on grids with jax.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = interpolation, jax
url = https://github.com/adam-coogan/jaxinterp2d
project_urls =
    Bug Tracker = https://github.com/adam-coogan/jaxinterp2d/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jax
    jaxlib

[options.packages.find]
where = src
